--- a/MS Projects/Giant Ragweed Resistance/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Giant Ragweed Resistance/Data Analysis - POST/MAPS.Rmd
@@ -76,9 +76,9 @@ base +
                    seed = TRUE,
                    show.legend = FALSE) +  
   north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
-  scale_color_manual(name = "Putative-Resistance", values = c("cyan4", "red", "orange2", "darkgreen")) +
+  scale_color_manual(name = "Ineffective POST Herbicides at 1x Dose", values = c("cyan4", "darkgreen", "red", "orange2")) +
   theme_map() +
-  labs(fill="", y = "Latitude", x = "Longitude", title = "Giant Ragweed Putative-Resistance in WI - 1x POST") +
+  labs(fill="", y = "Latitude", x = "Longitude", title = "Giant Ragweed Response to POST Herbicides") +
   theme(axis.text=element_blank(), 
         axis.title=element_blank(), 
         panel.background = element_rect(fill="white", color = "black"), 
@@ -86,13 +86,13 @@ base +
         panel.grid.minor = element_blank(),
         panel.border = element_rect(fill = NA,color = "white", size = 0.5, linetype = "solid"),
         legend.title = element_text(size = 18, colour = "black", face = "bold", hjust = 0),
-        legend.text = element_text(size = 18, colour = "black"), 
+        legend.text = element_text(size = 16, colour = "black"), 
         legend.key = element_rect(fill = NA),
         legend.key.width = unit(0.5, "line"),
-        legend.position = c(0.7, 0.8), 
+        legend.position = c(0.65, 0.8), 
         legend.background = element_rect(fill =NA), 
-        plot.title = element_text(color = "darkgreen", face = "bold", size = 25, hjust = 0.5)) +
-  ggsave("MAP_1X.jpeg", units = "in", width = 10, height = 10, dpi = 600)
+        plot.title = element_text(color = "darkgreen", face = "bold", size = 30, hjust = 0.5)) +
+  ggsave("MAP_1X.jpeg", units = "in", width = 13, height = 10, dpi = 600)
 
 
 ```
