--- a/MS Projects/Giant Ragweed Resistance/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Giant Ragweed Resistance/Data Analysis - POST/MAPS.Rmd
@@ -76,7 +76,7 @@ base +
                    seed = TRUE,
                    show.legend = FALSE) +  
   north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
-  scale_color_manual(name = "Ineffective POST Herbicides at 1x Dose", values = c("cyan4", "darkgreen", "red", "orange2")) +
+  scale_color_manual(name = "Resistance at the 1x Dose", values = c("cyan4", "red", "orange2", "darkgreen")) +
   theme_map() +
   labs(fill="", y = "Latitude", x = "Longitude", title = "Giant Ragweed Response to POST Herbicides") +
   theme(axis.text=element_blank(), 
@@ -85,8 +85,8 @@ base +
         panel.grid.major = element_line(color = "white"), 
         panel.grid.minor = element_blank(),
         panel.border = element_rect(fill = NA,color = "white", size = 0.5, linetype = "solid"),
-        legend.title = element_text(size = 18, colour = "black", face = "bold", hjust = 0),
-        legend.text = element_text(size = 16, colour = "black"), 
+        legend.title = element_text(size = 20, colour = "black", face = "bold", hjust = 0),
+        legend.text = element_text(size = 18, colour = "black"), 
         legend.key = element_rect(fill = NA),
         legend.key.width = unit(0.5, "line"),
         legend.position = c(0.65, 0.8), 
