--- a/MS Projects/Giant Ragweed Resistance/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Giant Ragweed Resistance/Data Analysis - POST/MAPS.Rmd
@@ -76,7 +76,7 @@ base +
                    seed = TRUE,
                    show.legend = FALSE) +  
   north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
-  scale_color_manual(name = "Resistance at the 1x Dose", values = c("cyan4", "red", "orange2", "darkgreen")) +
+  scale_color_manual(name = "Herbicide Resistance 1x Dose POST", values = c("cyan4", "red", "orange2", "darkgreen")) +
   theme_map() +
   labs(fill="", y = "Latitude", x = "Longitude", title = "Giant Ragweed Response to POST Herbicides") +
   theme(axis.text=element_blank(), 
