--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/MAPS.Rmd
@@ -89,7 +89,7 @@ base +
                    seed = TRUE,
                    show.legend = FALSE) +  
   north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
-  scale_color_manual(name = "1× Dose Herbicide Ineffectiveness", values = c("darkgreen", "blue", "black", "orange2","cyan4", "darkorchid3", "red", "firebrick" )) +
+  scale_color_manual(name = "Herbicide Resistance 1x Dose POST", values = c("darkgreen", "blue", "black", "orange2","cyan4", "darkorchid3", "red", "firebrick" )) +
   theme_map() +
   labs(fill="", y = "Latitude", x = "Longitude", title = "Waterhemp Response to POST Herbicides") +
   theme(axis.text=element_blank(), 
@@ -102,10 +102,10 @@ base +
         legend.text = element_text(size = 15, colour = "black"), 
         legend.key = element_rect(fill = NA),
         legend.key.width = unit(0.5, "line"),
-        legend.position = c(-0.15, 0.05), 
+        legend.position = c(0.65, 0.78), 
         legend.background = element_rect(fill =NA), 
         plot.title = element_text(color = "darkgreen", face = "bold", size = 30, hjust = 0.5)) +
-  ggsave("MAP_POPMAINPOOL_1X.jpeg", units = "in", width = 13, height = 10, dpi = 600)
+  ggsave("MAP_POPMAINPOOL_1X.jpeg", units = "in", width = 13, height = 11, dpi = 600)
 
 
 ```
