--- a/MS Projects/Waterhemp Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
@@ -97,8 +97,8 @@ plot(emm_herb_dose, adjust = "tukey", comparisons = F, alpha = 0.05) +
             vjust = -1, size = 4) +
     scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
-  labs(title = "Waterhemp Count Reduction - PRE", 
-       x = "Count Reduction (%)", 
+  labs(title = "Waterhemp Plant Density Reduction - PRE", 
+       x = "Plant Density Reduction (%)", 
        y = "Herbicide") + 
   facet_grid(~ Dose, labeller = label_both) +
   theme_bw() + 
