--- a/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/RAW COUNTRED_POPxHERBxDOSE.Rmd
+++ b/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/RAW COUNTRED_POPxHERBxDOSE.Rmd
@@ -73,7 +73,7 @@ ggplot(summary, aes(x = mean*100, y = pop)) +
   geom_vline(xintercept = 90, size = 1, colour = "red") +
   geom_errorbar(aes(xmin = (mean*100) - (se*100), xmax = (mean*100) + (se*100), width = 0.3)) + 
   facet_grid(Dose ~ herb, labeller = labeller(Dose = dose_labels)) +
-  labs(title = "Palmer Count Reduction - PRE", x = "Count Reduction (%)", y = "Accession") + 
+  labs(title = "Palmer Count Reduction - PRE", x = "Plant Density Reduction (%)", y = "Accession") + 
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 25, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 20, colour = "darkgreen"), 
