--- a/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
+++ b/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
@@ -110,7 +110,7 @@ plot(emm_pop_herb, adjust = "tukey", comparisons = F, alpha = 0.05) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(title = "Palmer Count Reduction - PRE", 
-       x = "Count Reduction (%)", 
+       x = "Plant Density Reduction (%)", 
        y = "Accession") + 
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 28, colour = "darkgreen"), 
@@ -133,7 +133,7 @@ plot(emm_herb_Dose, adjust = "tukey", comparisons = F, alpha = 0.05) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(title = "Palmer Count Reduction - PRE", 
-       x = "Count Reduction (%)", 
+       x = "Plant Density Reduction (%)", 
        y = "Herbicide") + 
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 28, colour = "darkgreen"), 
