--- a/MS Projects/Palmer amaranth Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
+++ b/MS Projects/Palmer amaranth Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
@@ -100,8 +100,8 @@ plot(emm_pop_herb_Dose, adjust = "tukey", comparisons = F, alpha = 0.05) +
             vjust = -1, size = 7) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
-  labs(title = "Palmer Biomass Reduction - POST", 
-       x = "Biomass Reduction (%)", 
+  labs(#title = "Palmer Biomass Reduction - POST", 
+       x = "Biomass reduction (%)", 
        y = "Accession") + 
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 38, colour = "darkgreen"), 
@@ -109,7 +109,7 @@ plot(emm_pop_herb_Dose, adjust = "tukey", comparisons = F, alpha = 0.05) +
          axis.text = element_text(face = "bold", size = 22, colour = "black"),
          strip.text = element_text(face = "bold", size = 25, colour = "black"),
          panel.spacing = unit(1.0, "lines")) +
-  ggsave("LOGIT Tukey HSD_POPxHERBxDOSE.jpeg", units="in", width=30, height=7, dpi=600)
+  ggsave("[Faleco]Fig3.tiff", units="in", width=30, height=7, dpi=1000, compression = "lzw")
 
 ```
 
