--- a/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
+++ b/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
@@ -109,8 +109,8 @@ plot(emm_pop_herb, adjust = "tukey", comparisons = F, alpha = 0.05) +
             vjust = -1, size = 5) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
-  labs(title = "Palmer Count Reduction - PRE", 
-       x = "Plant Density Reduction (%)", 
+  labs(#title = "Palmer Plant Density Reduction- PRE", 
+       x = "Plant density reduction (%)", 
        y = "Accession") + 
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 28, colour = "darkgreen"), 
@@ -118,7 +118,7 @@ plot(emm_pop_herb, adjust = "tukey", comparisons = F, alpha = 0.05) +
          axis.text = element_text(face = "bold", size = 15, colour = "black"),
          strip.text = element_text(face = "bold", size = 18, colour = "black"),
          panel.spacing = unit(1.0, "lines")) +
-  ggsave("LOGIT Tukey HSD_POPxHERB.jpeg", units="in", width = 15, height = 3, dpi = 600)
+  ggsave("[Faleco]Fig5.tiff", units="in", width = 15, height = 3, dpi=1000, compression = "lzw")
 
 
 
@@ -132,8 +132,8 @@ plot(emm_herb_Dose, adjust = "tukey", comparisons = F, alpha = 0.05) +
             vjust = -1, size = 5) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
-  labs(title = "Palmer Count Reduction - PRE", 
-       x = "Plant Density Reduction (%)", 
+  labs(#title = "Palmer Plant Density Reduction - PRE", 
+       x = "Plant density reduction (%)", 
        y = "Herbicide") + 
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 28, colour = "darkgreen"), 
@@ -141,7 +141,7 @@ plot(emm_herb_Dose, adjust = "tukey", comparisons = F, alpha = 0.05) +
          axis.text = element_text(face = "bold", size = 15, colour = "black"),
          strip.text = element_text(face = "bold", size = 18, colour = "black"),
          panel.spacing = unit(1.0, "lines")) +
-  ggsave("LOGIT Tukey HSD_HERBxDOSE.jpeg", units="in", width = 15, height = 4, dpi = 600)
+  ggsave("[Faleco]Fig6.tiff", units="in", width = 15, height = 4, dpi=1000, compression = "lzw")
 
 ```
 
