--- a/PhD Projects/Giant Ragweed/Dose Response/Fomesafen/Fomesafen_DR.Rmd
+++ b/PhD Projects/Giant Ragweed/Dose Response/Fomesafen/Fomesafen_DR.Rmd
@@ -143,7 +143,7 @@ plot(model.LL3,
      pch = c(19, 17),
      cex = 1,
      cex.axis = 1,
-     cex.lab = 1,
+     cex.lab = 2,
      lwd = 1)
 
 abline(v = 263, 
@@ -189,8 +189,9 @@ plot(model.LL3,
      col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1,
-     cex.axis = 1,
-     cex.lab = 1,
+     cex.axis = 1.2,
+     cex.lab = 1.5,
+     cex.legend = 1.2,
      lwd = 1)
 
 abline(v = 263, 
@@ -198,21 +199,21 @@ abline(v = 263,
        lty = "twodash",
        col = "black")
 
-text(x = 1500, y = 1.5, 
+text(x = 1400, y = 1.5, 
      labels = expression(paste("ED"[50] ~ "RI = 29.26 ("%+-% "6.63)")),
-     cex = 1,
+     cex = 1.1,
      col = "black",
      font = 2)
 
-text(x = 1150, y = 1.35, 
+text(x = 1050, y = 1.35, 
      labels = expression("p-value = < 0.0001"),
-     cex = 1,
+     cex = 1.1,
      col = "black",
      font = 2)
 
-text(x = 850, y = 0.6, 
+text(x = 950, y = 0.6, 
      labels = expression("1x dose: 263 g ai ha" ^-1),
-     cex = 1,
+     cex = 1.1,
      col = "black",
      font = 2)
 
