--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/RAW SURV_POPxHERBxRATE.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/RAW SURV_POPxHERBxRATE.Rmd
@@ -82,7 +82,7 @@ ggplot(summary, aes(x = mean*100, y = pop)) +
   geom_vline(xintercept = 50, size = 1, colour = "red") +
   geom_errorbar(aes(xmin = (mean*100) - (se*100), xmax = (mean*100) + (se*100), width = 0.4)) + 
   facet_grid(Dose ~ Herbicide, labeller = labeller(Dose = dose_labels))  +
-  labs(title = "Waterhemp Survivorship - POST", x = "% Survivorship", y = "Accession") + 
+  labs(title = "Waterhemp Survivorship - POST", x = "Survivorship (%)", y = "Accession") + 
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 50, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 45, colour = "darkgreen"), 
