--- a/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
+++ b/MS Projects/Palmer amaranth Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
@@ -31,7 +31,7 @@ palmer$pop <- as.factor(palmer$pop)
 
 palmer$herb <- as.factor(palmer$herb)
 
-palmer$Dose <- as.factor(palmer$Dose)
+palmer$Rate <- as.factor(palmer$Rate)
 
 palmer$rep <- as.factor(palmer$rep)
 
@@ -44,7 +44,7 @@ str(palmer)
 
 ```{r}
 
-model <- glmmTMB(logit(count_red) ~ pop * herb * Dose + (1|run), data = palmer, family = "gaussian")
+model <- glmmTMB(logit(count_red) ~ pop * herb * Rate + (1|run), data = palmer, family = "gaussian")
 
 ```
 
@@ -82,14 +82,14 @@ CLD_emm_pop_herb
 
 
 
-emm_herb_Dose <- emmeans(model, ~ herb|Dose, adjust = "tukey", type = "response", contr = "pairwise")
+emm_herb_Rate <- emmeans(model, ~ herb|Rate, adjust = "tukey", type = "response", contr = "pairwise")
 
-emm_herb_Dose
+emm_herb_Rate
 
-CLD_emm_herb_Dose <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_herb_Dose$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = T)}
+CLD_emm_herb_Rate <- if(requireNamespace("multcomp")) {
+    multcomp::cld(emm_herb_Rate$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = T)}
 
-CLD_emm_herb_Dose
+CLD_emm_herb_Rate
 
 ```
 
@@ -118,14 +118,18 @@ plot(emm_pop_herb, adjust = "tukey", comparisons = F, alpha = 0.05) +
          axis.text = element_text(face = "bold", size = 15, colour = "black"),
          strip.text = element_text(face = "bold", size = 18, colour = "black"),
          panel.spacing = unit(1.0, "lines")) +
-  ggsave("[Faleco]Fig5.tiff", units="in", width = 15, height = 3, dpi=1000, compression = "lzw")
+  ggsave("LOGIT Tukey HSD_POPxHERB.tiff", units="in", width = 15, height = 3, dpi=1000, compression = "lzw")
+  
+  
+
+#ggsave("[Faleco]Fig5.tiff", units="in", width = 15, height = 3, dpi=1000, compression = "lzw")
 
 
 
 
-plot(emm_herb_Dose, adjust = "tukey", comparisons = F, alpha = 0.05) + 
+plot(emm_herb_Rate, adjust = "tukey", comparisons = F, alpha = 0.05) + 
   geom_point(size = 2.5) +
-  facet_grid( ~ Dose, labeller = label_both) +
+  facet_grid( ~ Rate, labeller = label_both) +
   geom_text(aes(label = c("c", "b", "ab", "ab", "a", 
                           "b", "a", "a", "a", "a", 
                           "b", "a", "a", "a", "a")),
@@ -141,7 +145,10 @@ plot(emm_herb_Dose, adjust = "tukey", comparisons = F, alpha = 0.05) +
          axis.text = element_text(face = "bold", size = 15, colour = "black"),
          strip.text = element_text(face = "bold", size = 18, colour = "black"),
          panel.spacing = unit(1.0, "lines")) +
-  ggsave("[Faleco]Fig6.tiff", units="in", width = 15, height = 4, dpi=1000, compression = "lzw")
+  ggsave("LOGIT Tukey HSD_HERBxDOSE.tiff", units="in", width = 15, height = 4, dpi=1000, compression = "lzw")
+  
+  
+#ggsave("[Faleco]Fig6.tiff", units="in", width = 15, height = 4, dpi=1000, compression = "lzw")
 
 ```
 
