--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/RAW SURV_POPxHERBxRATE.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/RAW SURV_POPxHERBxRATE.Rmd
@@ -75,21 +75,28 @@ summary
 
 ```{r}
 
-dose_labels <- c("1x" = "Dose: 1x", "3x" = "Dose: 3x")
+dose_labels <- c("1x" = "Rate: 1x", "3x" = "Rate: 3x")
 
 ggplot(summary, aes(x = mean*100, y = pop)) + 
   geom_point(size = 4) + 
   geom_vline(xintercept = 50, size = 1, colour = "red") +
   geom_errorbar(aes(xmin = (mean*100) - (se*100), xmax = (mean*100) + (se*100), width = 0.4)) + 
   facet_grid(Dose ~ Herbicide, labeller = labeller(Dose = dose_labels))  +
-  labs(title = "Waterhemp Survivorship - POST", x = "Survivorship (%)", y = "Accession") + 
+  labs(#title = "Waterhemp Survivorship - POST", 
+    x = "Plant Survival (%)", 
+    y = "Accession") + 
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 50, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 45, colour = "darkgreen"), 
          axis.text = element_text(face = "bold", size = 28, colour = "black"),
          strip.text = element_text(face = "bold", size = 32, colour = "black"),
          panel.spacing = unit(1.5, "lines")) +
-  ggsave("RAW SURV_POPxHERBxRATE.jpeg", units = "in", width = 35, height = 22, dpi = 600)
+  ggsave("RAW SURV_POPxHERBxDOSE.tiff", units = "in", width = 35, height = 22, dpi = 1000, compression = "lzw")
+  
+  
+  
+  
+  #ggsave("RAW SURV_POPxHERBxRATE.jpeg", units = "in", width = 35, height = 22, dpi = 600)
 
 ```
 
