--- a/MS Projects/Waterhemp Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - POST/LOGIT_BIORED.Rmd
@@ -16,6 +16,7 @@ library(multcompView)
 library(glmmTMB)
 library(ggpubr)
 
+
 ```
 
 
@@ -33,7 +34,7 @@ waterhemp$pop <- as.factor(waterhemp$pop)
 
 waterhemp$Herbicide <- as.factor(waterhemp$Herbicide)
 
-waterhemp$Dose <- as.factor(waterhemp$Dose)
+waterhemp$Dose <- as.factor(waterhemp$Rate)
 
 waterhemp$rep <- as.factor(waterhemp$rep)
 
@@ -46,7 +47,7 @@ str(waterhemp)
 
 ```{r}
 
-model <- glmmTMB(logit(bio_red) ~ Herbicide * Dose + (1|run) + (1|pop), data = waterhemp, family = "gaussian")
+model <- glmmTMB(logit(bio_red) ~ Herbicide * Rate + (1|run) + (1|pop), data = waterhemp, family = "gaussian")
 
 
 ```
@@ -74,14 +75,14 @@ glmmTMB:::Anova.glmmTMB(model)
 
 ```{r, echo=TRUE}
 
-emm_herb_dose <- emmeans(model, ~ Herbicide|Dose, adjust = "tukey", type = "response", contr = "pairwise")
+emm_herb_rate <- emmeans(model, ~ Herbicide|Rate, adjust = "tukey", type = "response", contr = "pairwise")
 
-emm_herb_dose
+emm_herb_rate
 
-CLD_emm_herb_dose <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_herb_dose$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
+CLD_emm_herb_rate <- if(requireNamespace("multcomp")) {
+    multcomp::cld(emm_herb_rate$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
 
-CLD_emm_herb_dose
+CLD_emm_herb_rate
 
 ```
 
@@ -91,24 +92,24 @@ CLD_emm_herb_dose
 ```{r, echo=TRUE}
 
 
-plot(emm_herb_dose, adjust = "tukey", comparisons = F, alpha = 0.05) + 
+plot(emm_herb_rate, adjust = "tukey", comparisons = F, alpha = 0.05) + 
   geom_point(size = 2) +
   geom_text(aes(label = c("b", "b", "b", "a", "a", "c", "d", "a",
                           "a", "a", "a", "a", "a", "b", "c", "a")),
             vjust = -0.8, size = 4) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
-  labs(title = "Waterhemp Biomass Reduction - POST", 
+  labs(#title = "Waterhemp Biomass Reduction - POST", 
        x = "Biomass Reduction (%)", 
        y = "Herbicide") +
-  facet_grid(~ Dose, labeller = label_both) +
+  facet_grid(~ Rate, labeller = label_both) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
          axis.text= element_text(face = "bold", size = 14, colour = "black"),
          strip.text = element_text(face = "bold", size = 14, colour = "black"),
          panel.spacing = unit(1.0, "lines")) +
-  ggsave("LOGIT Tukey HSD_HERBxRATE.jpeg", units="in", width = 10, height = 4, dpi = 600)
+  ggsave("LOGIT Tukey HSD_HERBxRATE.tiff", units="in", width = 10, height = 4, dpi = 600, compression = "lzw")
 
 
 ```
