--- a/MS Projects/Waterhemp Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
+++ b/MS Projects/Waterhemp Resistance/Data Analysis - PRE/LOGIT_COUNTRED.Rmd
@@ -33,7 +33,7 @@ waterhemp$pop <- as.factor(waterhemp$pop)
 
 waterhemp$Herbicide <- as.factor(waterhemp$Herbicide)
 
-waterhemp$Dose <- as.factor(waterhemp$Dose)
+waterhemp$Rate <- as.factor(waterhemp$Rate)
 
 waterhemp$rep <- as.factor(waterhemp$rep)
 
@@ -46,7 +46,7 @@ str(waterhemp)
 
 ```{r}
 
-model <- glmmTMB(logit(count_red) ~ Herbicide * Dose + (1|run) + (1|pop), data = waterhemp, family = "gaussian")
+model <- glmmTMB(logit(count_red) ~ Herbicide * Rate + (1|run) + (1|pop), data = waterhemp, family = "gaussian")
 
 ```
 
@@ -73,14 +73,14 @@ glmmTMB:::Anova.glmmTMB(model)
 
 ```{r, echo=TRUE}
 
-emm_herb_dose <- emmeans(model, ~ Herbicide|Dose, adjust = "tukey", type = "response", contr = "pairwise")
+emm_herb_rate<- emmeans(model, ~ Herbicide|Rate, adjust = "tukey", type = "response", contr = "pairwise")
 
-emm_herb_dose
+emm_herb_rate
 
-CLD_emm_herb_dose <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_herb_dose$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
+CLD_emm_herb_rate <- if(requireNamespace("multcomp")) {
+    multcomp::cld(emm_herb_rate$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
 
-CLD_emm_herb_dose
+CLD_emm_herb_rate
 
 ```
 
@@ -89,7 +89,7 @@ CLD_emm_herb_dose
 
 ```{r, echo=TRUE}
 
-plot(emm_herb_dose, adjust = "tukey", comparisons = F, alpha = 0.05) + 
+plot(emm_herb_rate, adjust = "tukey", comparisons = F, alpha = 0.05) + 
   geom_point(size = 1) +
   geom_text(aes(label = c("c", "b", "a", "a", "a",
                           "b", "a", "a", "a", "a",
@@ -97,16 +97,16 @@ plot(emm_herb_dose, adjust = "tukey", comparisons = F, alpha = 0.05) +
             vjust = -1, size = 4) +
     scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
-  labs(title = "Waterhemp Plant Density Reduction - PRE", 
+  labs(#title = "Waterhemp Plant Density Reduction - PRE", 
        x = "Plant Density Reduction (%)", 
        y = "Herbicide") + 
-  facet_grid(~ Dose, labeller = label_both) +
+  facet_grid(~ Rate, labeller = label_both) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 22, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
          axis.text = element_text(face = "bold", size = 13, colour = "black"),
          strip.text = element_text(face = "bold", size = 13, colour = "black")) +
-  ggsave("LOGIT Tukey HSD_HERBxRATE.jpeg", units="in", width = 10, height = 4, dpi = 600)
+  ggsave("LOGIT Tukey HSD_HERBxRATE.tiff", units="in", width = 10, height = 4, dpi = 600, compression = "lzw")
 
 ```
 
